packages/core/src/form-field/FormField.css
.saltFormField {
  display: inline-grid;
  position: relative;
  gap: var(--salt-spacing-100);
  text-align: left;
  width: var(--saltFormField-width, 100%);

  font-family: var(--salt-text-fontFamily);
  font-size: var(--salt-text-fontSize);
  font-weight: var(--salt-text-fontWeight);
  line-height: var(--salt-text-lineHeight);
}

.saltFormField-labelTop {
  gap: var(--salt-spacing-75);
  grid-template-areas:
    "label"
    "controls";
}

.saltFormField-labelTop .saltFormFieldHelperText {
  grid-area: 3 / 1;
}

.saltFormField-labelLeft {
  align-self: center;
  grid-template-columns: var(--saltFormField-label-width, var(--formField-label-width, 40%)) 1fr;
  grid-template-areas: "label controls";
}

.saltFormField-labelRight {
  align-self: center;
  grid-template-columns: var(--saltFormField-label-width, var(--formField-label-width, 40%)) 1fr;
  grid-template-areas: "label controls";
}

.saltFormField-labelLeft .saltFormFieldHelperText,
.saltFormField-labelRight .saltFormFieldHelperText {
  grid-area: 2 / 2;
}

.saltFormField-labelRight .saltFormFieldLabel,
.saltFormField-labelLeft .saltFormFieldLabel {
  padding-top: var(--salt-spacing-100);
}

.saltFormField-labelRight .saltFormFieldLabel {
  text-align: right;
}

.saltFormField-controls {
  align-items: center;
  display: grid;
  grid-auto-columns: minmax(0, 1fr);
  grid-auto-flow: column;
  grid-column-gap: var(--salt-spacing-100);
}

.saltFormFieldLabel {
  grid-area: label;
}

.saltFormFieldHelperText {
  grid-area: helperText;
}

.saltFormField-disabled {
  --saltInput-outline: none;
  --saltCheckbox-outline: none;
  --saltRadioButton-outline: none;
}

